# ForIGA

./: .fortls  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
executables/exe1/: CMakeLists.txt  exe1.f90
modules/: CMakeLists.txt
modules/basis/: CMakeLists.txt  bspline_m.f90
modules/util/: CMakeLists.txt  conversion_m.f90  settings_m.f90
tests/: CMakeLists.txt
tests/basis/: CMakeLists.txt  bspline_n_1_0_test.f90  bspline_test.pf  bspline_test_fixture.f90  bspline_tests.cmake
tests/test1/: CMakeLists.txt  test1.pf
